final vesion run docs incluide

--- a/src/stylesheets/index.css
+++ b/src/stylesheets/index.css
@@ -6,5 +6,8 @@
 }
 
 body {
-  background-color: #212121;
+  background-image: url(../images/PokeBall.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 0px 50px;
 }
