--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -1,14 +1,14 @@
 .App {
   text-align: center;
   height: 100vh;
-  background-color: #222831;
+  // background-color: #222831;
   font-family: Roboto Slab;
-  color: #bef992;
+  color: black;
   //display: flex;
 }
 .logo {
-  width: 200px;
-  height: 100px;
+  width: 500px;
+  height: 200px;
 }
 /*
 .section {
