add changes from issues

--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -10,6 +10,10 @@
   width: 500px;
   height: 200px;
 }
+.title2 {
+  margin: 20px;
+  color: rgba(255, 255, 255, 0.89);
+}
 /*
 .section {
   width: 100px;
