--- a/src/stylesheets/PokemonList.scss
+++ b/src/stylesheets/PokemonList.scss
@@ -2,4 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  background-color: rgba(255, 255, 255, 0.6);
+  padding: 30px;
+  border-radius: 2%;
 }
